[gd_scene load_steps=12 format=3 uid="uid://b8exv6qda8frv"]

[ext_resource type="Script" uid="uid://dwk2vfh7rmwsq" path="res://scripts/main.gd" id="1_u5sy4"]
[ext_resource type="PackedScene" uid="uid://b54c7ad6cogrm" path="res://scenes/ui.tscn" id="2_gee14"]
[ext_resource type="Texture2D" uid="uid://cr7usmfo6apt8" path="res://Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="3_0tnpc"]
[ext_resource type="Texture2D" uid="uid://o6gwbftsnc8c" path="res://Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="4_vtaks"]
[ext_resource type="Texture2D" uid="uid://t06eg6ked10a" path="res://assets/Dynamic Space Background/Nebula Aqua-Pink.png" id="5_kvpfn"]
[ext_resource type="PackedScene" uid="uid://b32476hejmrnj" path="res://scenes/player.tscn" id="6_dinhu"]
[ext_resource type="Script" uid="uid://ko253g8mr36f" path="res://scripts/Camera2D.gd" id="7_kvuet"]

[sub_resource type="Animation" id="Animation_frim2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 240, 320)]
}

[sub_resource type="Animation" id="Animation_lmpjc"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 240, 320), Rect2(2.08165e-12, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d33qh"]
_data = {
&"RESET": SubResource("Animation_frim2"),
&"new_animation": SubResource("Animation_lmpjc")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uf0tv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_u5sy4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_gee14")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_0tnpc")

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_vtaks")

[node name="PauseMenu" type="Panel" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOverScreen" type="Panel" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(120, 160)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_kvpfn")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 240, 320)

[node name="Player" parent="." instance=ExtResource("6_dinhu")]
position = Vector2(120, 240)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d33qh")
}
autoplay = "new_animation"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 160)
script = ExtResource("7_kvuet")
noise = SubResource("FastNoiseLite_uf0tv")

[node name="EnemyAnchor" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="update_shield"]
